--- a/devStore/src/index.html
+++ b/devStore/src/index.html
@@ -13,6 +13,9 @@
 <!-- Inclua o Bootstrap JavaScript (junto com o Popper.js) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css">
+
+
 </head>
 <body>
   <app-root></app-root>
